# Rust-Ping

./: .gitignore  Cargo.toml  LICENSE.md  README.md  devices.json  email_config.json
src/: config_handler.js  email.rs  main.rs  models.rs  sensors.rs
static/: admin-dashboard.css  admin-dashboard.html  admin-dashboard.js  config.js  email-settings.js  email_config.html  failed_logs.html  index.html  log_view.html  login.css  login.html  login.js  manage-device.css  manage-devices.html  manage-devices.js  password-manager.css  password-manager.html  password-manager.js  script.js  styles.css
