[package]
name = "RustPing"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.11"
ping = "0.5"
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
rocket = { version = "0.5.1", features = ["json"] }
serde_json = "1.0"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"